--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -1,6 +1,5 @@
-
-<ul class="alert alert-danger" *ngIf="errores?.length > 0" >
-  <li *ngFor="let err of errores" >
+<ul class="alert alert-danger" *ngIf="errores?.length > 0">
+  <li *ngFor="let err of errores">
     {{err}}
   </li>
 </ul>
@@ -11,7 +10,8 @@
       <div class="form-group row">
         <label for="nombre" class="col-form-label col-sm-2">Nombre </label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" [(ngModel)]="cliente.nombre" name="nombre"  #nombre="ngModel"><!--required minlength="4"-->
+          <input type="text" class="form-control" [(ngModel)]="cliente.nombre" name="nombre" #nombre="ngModel">
+          <!--required minlength="4"-->
           <div class="alert alert-danger" *ngIf="nombre.invalid && (nombre.dirty || nombre.touched)">
             <div *ngIf="['nombre.errors.required']">
               Nombre es requerido
@@ -26,20 +26,21 @@
       <div class="form-group row">
         <label for="apellido" class="col-form-label col-sm-2">Apellido </label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" [(ngModel)]="cliente.apellido" name="apellido" #apellido="ngModel"><!--required-->
+          <input type="text" class="form-control" [(ngModel)]="cliente.apellido" name="apellido" #apellido="ngModel">
+          <!--required-->
           <div class="alert alert-danger" *ngIf="apellido.invalid && (apellido.dirty || apellido.touched)">
             <div *ngIf="['apellido.errors.required']">
               El apellido es requerido
             </div>
           </div>
         </div>
-
       </div>
 
       <div class="form-group row">
         <label for="email" class="col-form-label col-sm-2">Email </label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" #email="ngModel"><!--required email-->
+          <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" #email="ngModel">
+          <!--required email-->
           <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
             <div *ngIf="['email.errors.required']">
               El email es requerido
@@ -49,15 +50,24 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="form-group row">
+        <label for="createAt" class="col-form-label col-sm-2">Fecha </label>
+        <div class="col-sm-6">
+          <input [matDatepicker]="miDatepicker" class="form-control" [(ngModel)]="cliente.createAt" name="createAt" style="display: inline; width: 300px">
+          <mat-datepicker-toggle [for]="miDatepicker"></mat-datepicker-toggle>
+          <mat-datepicker #miDatepicker></mat-datepicker>
+        </div>
       </div>
 
       <div class="form-group row">
         <div class="col-sm-6">
-          <button class="btn btn-primary" role="button" (click)="create()"
-            *ngIf="!cliente.id else elseblock" [disabled]="!clienteForm.form.valid">Crear</button>
+          <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!cliente.id else elseblock"
+            [disabled]="!clienteForm.form.valid">Crear</button>
           <ng-template #elseblock>
-            <button class="btn btn-primary" role="button" (click)="update()" [disabled]="!clienteForm.form.valid">Editar</button>
+            <button class="btn btn-primary" role="button" (click)="update()"
+              [disabled]="!clienteForm.form.valid">Editar</button>
           </ng-template>
 
         </div>
