--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -1,4 +1,4 @@
-<div class="abrir-modal animacion fadeIn" *ngIf="modalService.modal">
+<div class="abrir-modal animacion fadeIn" *ngIf="modalService.modal" >
 <div class="modal" tabindex="-1" role="dialog" style="display:block;">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -18,6 +18,7 @@
                 <li class="list-group-item">{{cliente.apellido}}</li>
                 <li class="list-group-item">{{cliente.email}}</li>
                 <li class="list-group-item">{{cliente.createAt | date:"fullDate"}}</li>
+                <li class="list-group-item">{{cliente.region.nombre}}</li>
               </ul>
 
               <div class="input-group mb-3">
