--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -56,11 +56,22 @@
       <div class="form-group row">
         <label for="createAt" class="col-form-label col-sm-2">Fecha </label>
         <div class="col-sm-6">
-          <input [matDatepicker]="miDatepicker" class="form-control" [(ngModel)]="cliente.createAt" name="createAt" style="display: inline; width: 300px">
+          <input [matDatepicker]="miDatepicker" class="form-control" [(ngModel)]="cliente.createAt" name="createAt"
+            style="display: inline; width: 300px">
           <mat-datepicker-toggle [for]="miDatepicker"></mat-datepicker-toggle>
           <mat-datepicker #miDatepicker></mat-datepicker>
         </div>
       </div>
+      <div class="form-group row">
+        <label for="createAt" class="col-form-label col-sm-2">Region </label>
+        <div class="col-sm-6">
+          <select [compareWith]="compararRegion" class="form-control" [(ngModel)]="cliente.region" name="region" style="width: 500px">
+          <option [ngValue]="undefined">--- seleccionar una región ---</option>
+            <option *ngFor="let region of regiones" [ngValue]="region">{{region.nombre}}</option>
+          </select>
+        </div>
+      </div>
+
 
       <div class="form-group row">
         <div class="col-sm-6">
