--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -4,7 +4,7 @@
   <div class="card-body text-primary">
     <h5 class="card-title">Listado de clientes</h5>
     <div class="my-2 text-left">
-      <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">
+      <button  *ngIf="authService.hasRole('ROLE_ADMIN')" class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">
         Crear Cliente
       </button>
     </div>
@@ -14,21 +14,19 @@
     <table class="table table-bordered table-striped" *ngIf="clientes?.length > 0">
       <thead>
         <tr>
-          <th>id</th>
+          <th *ngIf="authService.hasRole('ROLE_USER')">#</th>
           <th>nombre</th>
           <th>apellido</th>
           <th>email</th>
           <th>fecha</th>
-          <th>
-            editar
-          </th>
-          <th>eliminar</th>
+          <th *ngIf="authService.hasRole('ROLE_ADMIN')">editar</th>
+          <th *ngIf="authService.hasRole('ROLE_ADMIN')">eliminar</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let cliente of clientes">
           <!-- <td><button [routerLink]="['/clientes/ver', cliente.id]" class="btn btn-success btn-sm" type="button">{{ cliente.id }}</button></td> -->
-          <td>
+          <td *ngIf="authService.hasRole('ROLE_USER')" >
             <img (click)="abrirModal(cliente)" *ngIf="cliente?.foto"
               src="http://localhost:8080/api/uploads/img/{{cliente.foto}}" alt="{{cliente.foto}}"
               class="img-thumbnail rounded" style="width: 64px; cursor: pointer;">
@@ -40,11 +38,11 @@
           <td>{{ cliente.email }}</td>
           <td>{{ cliente.createAt }}</td>
           <!-- <td>{{ cliente.createAt | date: "EEEE dd, MMMM yyyy"}}</td> -->
-          <td>
+          <td *ngIf="authService.hasRole('ROLE_ADMIN')">
             <button type="button" name="editar" [routerLink]="['/clientes/form', cliente.id]"
               class="btn btn-primary btn-sm">editar</button>
           </td>
-          <td>
+          <td *ngIf="authService.hasRole('ROLE_ADMIN')">
             <button type="button" name="eliminar" (click)='delete(cliente)'
               class="btn btn-danger btn-sm">eliminar</button>
           </td>
