--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark " style="background: black">
   <a class="navbar-brand" href="#"> {{ title }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -15,27 +16,21 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link text-white" routerLink="/clientes">Clientes</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+    </ul>
+    <ul class="navbar-nav navbar-right">
+      <li *ngIf="!authService.isAuthenticated()"><a [routerLink]="['/login']" class="btn btn-outline-primary">Inicie
+          sesión</a></li>
+      <li *ngIf="authService.isAuthenticated()" class="dropdown">
+        <a class="btn btn-outline-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{ authService.usuario.username }}
         </a>
-        <div class="dropdown-menu text-white" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-white" href="#">Action</a>
-          <a class="dropdown-item text-white" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-white" href="#">Something else here</a>
+
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <button (click)="logout()" class="dropdown-item" type="submit">Sign Out</button>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled text-white" href="#">Disabled</a>
-      </li>
+
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
